[tool.poetry]
name = "crk-guild-darkcacao"
version = "0.1.0"
description = "Streamlit App to provide information of the Guild Battle Leaderboard: Cookie Run Kingdom's Dark Cacao server."
authors = ["SantaMonica"]
readme = "README.md"
package-mode = false



[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
plotly = "^5.22.0"
streamlit = "^1.35.0"
streamlit-extras = "^0.4.3"
streamlit-aggrid = "^1.0.5"
streamlit-navigation-bar = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
