[project]
name = "crk-guild-darkcacao"
dynamic = [ "version" ]
description = "Streamlit App to provide information of the Guild Battle Leaderboard: Cookie Run Kingdom's Dark Cacao server."
authors = [
    { name = "SantaMonica", email = "nuttysang@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.0",
    "plotly>=6.1.0",
    "streamlit>=1.45.0",
    "streamlit-extras>=0.4.3",
    "streamlit-aggrid>=1.0.5",
    "streamlit-navigation-bar>=3.3.0",
]



[tool.poetry]
version = "1.0"  # base version
package-mode = false




[tool.poetry.dependencies]
python = "^3.11,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
